restrict-wildcard-verbs/.chainsaw-test/crb-bad.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb01
subjects:
- kind: ServiceAccount
  namespace: test2
  name: foo1
roleRef:
  kind: ClusterRole
  name: badcr01
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb02
subjects:
- kind: ServiceAccount
  namespace: test2
  name: foo2
roleRef:
  kind: ClusterRole
  name: badcr02
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: badcrb03
subjects:
- kind: ServiceAccount
  namespace: test2
  name: foo3
roleRef:
  kind: ClusterRole
  name: badcr03
  apiGroup: rbac.authorization.k8s.io
