restrict-wildcard-verbs/.chainsaw-test/crb-good.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: goodcrb01
subjects:
- kind: ServiceAccount
  namespace: test4
  name: foo1
roleRef:
  kind: ClusterRole
  name: goodcr01
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: goodcrb02
subjects:
- kind: ServiceAccount
  namespace: test4
  name: foo2
roleRef:
  kind: ClusterRole
  name: goodcr02
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: goodcrb03
subjects:
- kind: ServiceAccount
  namespace: test4
  name: foo3
roleRef:
  kind: ClusterRole
  name: goodcr03
  apiGroup: rbac.authorization.k8s.io
