restrict-wildcard-verbs/.chainsaw-test/rb-good.yaml
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: goodrb01
subjects:
- kind: ServiceAccount
  name: bar1
  namespace: bar
roleRef:
  kind: Role
  name: goodcr01
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: goodrb02
subjects:
- kind: ServiceAccount
  name: bar2
  namespace: bar
roleRef:
  kind: Role
  name: goodcr02
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: goodrb03
subjects:
- kind: ServiceAccount
  name: bar3
  namespace: bar
roleRef:
  kind: Role
  name: goodcr03
  apiGroup: rbac.authorization.k8s.io
