restrict-wildcard-verbs/.chainsaw-test/chainsaw-step-01-assert-2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-wildcard-verbs-in-roles
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
